# StatComP

./: .gitignore  CMakeLists.txt  README.md  SimpleDriver.py  StatComp.g4  main.cpp  output.ll  test  test.cpp  test.scp  test_asimetria_negativa.scp  test_barchart.scp  test_tablas.scp
.cache/clangd/index/: main.cpp.55A1583EF667EEF8.idx
src/: CMakeLists.txt  Driver.h  StatComp.g4
